# learn_sdl3_gpu

./: Cargo.toml  readme.md
common/: Cargo.toml
common/src/: game_memory.rs  lib.rs
common/src/graphics/: batch.rs  material.rs  mod.rs  render_target.rs  subtexture.rs  texture.rs
common/src/input/: keyboard.rs  mouse.rs
common/src/memory/: arena.rs
common/src/shaders/: compile.sh  default.hlsl  red.hlsl  triangle.hlsl
common/src/shaders/compiled/: default.vertex.msl  triangle.fragment.msl  triangle.fragment.spv
common/src/ui/: gui.rs  mod.rs  utils.rs  widget.rs  window.rs
common/src/ui/Iosevka/: Iosevka.txt
common/src/utils/: animation.rs  atlas.rs  font_atlas.rs  glyph.rs  mod.rs  texture_atlas.rs  tile_atlas.rs
game/: Cargo.toml  build.rs
game/assets/: level  player.atlas  readme.md
game/src/: camera.rs  editor.rs  game.rs  game_state.rs  grid.rs  lib.rs  materials.rs  player.rs  room.rs  sprite.rs  world.rs
src/: game_dll.rs  main.rs  materials.rs
src/graphics/: batch.rs  material.rs  mesh.rs  mod.rs  render_target.rs  texture.rs
src/shaders/: triangle.hlsl
src/shaders/compiled/: red.fragment.msl  red.fragment.spv  triangle.fragment.msl  triangle.fragment.spv  triangle.vertex.msl  triangle.vertex.spv
